@startuml
 ' ======= layout =========
 skinparam backgroundColor #fcf9ea
 skinparam titleBorderRoundCorner 15
 skinparam titleFontSize 30
 skinparam classAttributeIconSize 0
 skinparam titleFontName Arial Black
 skinparam titleFontColor #f8a978
 skinparam roundcorner 20
 skinparam stereotypeCBackgroundColor ffc5a1
 skinparam class {

 ArrowColor ffc5a1
 BorderColor White
 BackgroundColor badfdb
 }


 ' ======= title =========
 center header


 endheader
 title <b>US2006 - Class Diagram\n

' ======= classes =========

class ShowDashboardController{
+showDashboard()
}
class ShowDashboardUI{
}
class HttpServerAgvStatus{
+ HttpServerAgvStatus()
+ changeController(controller)
+ run()
+ getPersonalInfo()
+ refreshDashboard()
+ buildFirstLine(lengthSquares)
+ buildColumnsMatrix(warehouse,widthSquares,lengthSquares)
+ buildMatrix(warehouse,widthSquares,lengthSquares)
+ addSquares(widthSquares,lengthSquares,s,matrix,columnsMatrix)

}
class HttpAgvStatusRequest{
+ HttpAgvStatusRequest(s,f)
+ run()
}

class HTTPMessage{
+ readHeaderLine(in)
+ writeHeaderLine(out,line)
+ HTTPMessage(in)
+ HTTPMessage()
+ setResponseStatus(sT)
+ setContent(cnt,cType)
+ setRequestMethod(m)
+ send(out)
+ getMethod()
+ getURI()
+ getStatus()
+ setURI(u)
+ hasContent()
+ getContentAsString()
+ getContent()
+ setContentFromString(c,ct)
+ setContentFromFile(fname)
}
class WarehouseRepository{
+findAll()
}

ShowDashboardUI ..> ShowDashboardController
ShowDashboardController ..> HttpServerAgvStatus
HttpServerAgvStatus ..> WarehouseRepository
HttpServerAgvStatus ..> HttpAgvStatusRequest
HttpServerAgvStatus ..> HTTPMessage
HttpAgvStatusRequest ..> HTTPMessage


@enduml